fixed: small issue on business hours

--- a/views/default/calendar_ui/calendar_ui.css
+++ b/views/default/calendar_ui/calendar_ui.css
@@ -110,4 +110,8 @@
     text-align: center;
 }
 
+.elgg-form-calendar-ui-business-hours .divTableRow_h {
+    display: none;
+}
+
 /* ******************* */
